--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,17 @@
       </exclusions>
     </dependency>
     <!-- LOGGING end -->
+    <!-- https://mvnrepository.com/artifact/com.alibaba/druid -->
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>druid</artifactId>
+      <version>1.2.22</version>
+    </dependency>
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.16</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
